--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <resources>
-  <color name="splashscreen_background">#C1DFE2</color>
-  <color name="iconBackground">#C1DFE2</color>
+  <color name="splashscreen_background">#0096A3</color>
+  <color name="iconBackground">#0096A3</color>
   <color name="colorPrimary">#023c69</color>
-  <color name="colorPrimaryDark">#C1DFE2</color>
+  <color name="colorPrimaryDark">#0096A3</color>
 </resources>
